# Scale-car-based-Self-driving-Competition_2023

./: README.md
capstone_/: CMakeLists.txt  package.xml
capstone_/launch/: drive1.launch
capstone_/src/: drive.cpp  drive3.cpp  drive_2.cpp  sungjae.cpp
info_object/: CMakeLists.txt  package.xml
info_object/launch/: drive.launch
info_object/src/: clustering.cpp  kdtree.cpp  passthrough.cpp
obstacle_detector/src/: obstacle_extractor.cpp
pcl/: CMakeLists.txt  curve_5m.bag  package.xml
pcl/launch/: .goutputstream-WXU5M1  drive.launch  pcl.launch  pcltest.launch
pcl/src/: clustering1.cpp  clustering2.cpp  kdtree2.cpp  passPC1.cpp  passx1.cpp  passx2.cpp  passy1.cpp  passy2.cpp  voxel.cpp
scalecar/launch/: future_test.launch  scale_total_launch.launch
scalecar/scripts/: child_sign.py  detect_clust_obs.py  detect_obs_night.py  main_class_hsv.py  main_class_hsv_future.py  obs_cluster_detect.py  rabacon_drive.py  rabacon_drive_copy.py  rabacon_drive_test.py  rabacon_drive_test2.py  slidewindow.py  slidewindow_future.py  warper.py
